// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> by default matches with snapshot 1`] = `
<ul
  className="list__StyledList-sc-1ns0hml-0 iOAPpw"
>
  <li>
    <div>
      Item 1
    </div>
  </li>
  <li>
    <div>
      Item 2
    </div>
  </li>
  <li>
    <div>
      Item 3
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> by default matches with snapshot 1`] = `
<ul
  className="list__StyledList-sc-1ns0hml-0 iOAPpw"
>
  <li>
    <div
      aria-disabled={false}
      className="button-item__Item-sc-1xwobvm-0 jDUqAr k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Alice
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right button-item__ArrowIcon-sc-1xwobvm-3 HJfyJ k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="button-item__Item-sc-1xwobvm-0 gSlOWB k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Cheshire Cat
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right button-item__ArrowIcon-sc-1xwobvm-3 HJfyJ k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="button-item__Item-sc-1xwobvm-0 gSlOWB k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Mad Hatter
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right button-item__ArrowIcon-sc-1xwobvm-3 HJfyJ k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> with a disabled button matches with snapshot 1`] = `
<ul
  className="list__StyledList-sc-1ns0hml-0 iOAPpw"
>
  <li>
    <div
      aria-disabled={false}
      className="button-item__Item-sc-1xwobvm-0 jDUqAr k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Alice
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right button-item__ArrowIcon-sc-1xwobvm-3 HJfyJ k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={true}
      className="button-item__Item-sc-1xwobvm-0 hOrLIX k-List__button"
      disabled={true}
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onKeyPress={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Cheshire Cat
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-ArrowIcon--disabled button-item__ArrowIcon-sc-1xwobvm-3 kluWHo k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="button-item__Item-sc-1xwobvm-0 gSlOWB k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="button-item__Content-sc-1xwobvm-1 ekBhzT"
      >
        Mad Hatter
      </div>
      <div
        className="button-item__Arrow-sc-1xwobvm-2 dSghOv"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right button-item__ArrowIcon-sc-1xwobvm-3 HJfyJ k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;
